# bevy_guessture

./: Cargo.toml  README.md
bevy_guessture/: Cargo.toml  README.md
bevy_guessture/assets/: data.gestures
bevy_guessture/examples/: train.rs
bevy_guessture/src/: lib.rs
guessture/: Cargo.toml  LICENSE  README.md
guessture/src/: lib.rs
