[package]
name = "bevy_guessture"
version = "0.1.0"
edition = "2021"
authors = ["Josh Matthews <josh@joshmatthews.net>"]
license = "MIT"
description = "Bevy plugin wrapping the `guessture` crate's gesture recognition API."
repository = "https://github.com/jdm/bevy_guessture"

[[example]]
name = "train"

[lib]
name = "bevy_guessture"

[dependencies]
bevy = { version = "0.13", default-features = false, features = ["bevy_asset"] }
bevy_common_assets = { version = "0.10.0", features = ["json"] }
guessture = { path = "../guessture" }
serde = "1.0"
serde_json = "1"

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "default_font",
] }
